<?xml version="1.0" encoding="utf-8"?>

<!--suppress AndroidUnresolvableTag -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/secondary"
    tools:context=".Settings"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <ImageView
            android:src="@drawable/back_btn"
            android:padding="14dp"
            android:contentDescription="TODO"
            android:layout_height="50dp"
            android:layout_width="50dp"/>

        <TextView
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/setting"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="791dp"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                tools:srcCompat="@drawable/picon" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textColor="#0081C9"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/num"
                android:textColor="#0081C9"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_bach_secondary_100"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="Edit Profile"
                android:textAllCaps="false"
                android:textColor="@color/primary3" />

            <!--First-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@color/primary1"
                android:orientation="vertical"
                android:padding="15dp">

                <!---NightMode-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12sp"
                        android:src="@drawable/baseline_mode_night_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="@string/nightmode"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/SwitchNight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/nightModeSwitch"
                        tools:ignore="TouchTargetSizeCheck" />

                </RelativeLayout>

                <!---Notification-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#00FFFFFF">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_notification"
                        android:padding="12sp"
                        android:src="@drawable/notification_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="@string/noitif"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/notificationSwitch"
                        tools:ignore="TouchTargetSizeCheck" />

                </RelativeLayout>

                <!---Private account-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#00FFFFFF">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/rounf_back_private_account"
                        android:padding="12sp"
                        android:src="@drawable/private_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="@string/priv"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:switchMinWidth="50dp"
                        android:theme="@style/privateaccountSwitch"
                        tools:ignore="TouchTargetSizeCheck" />

                </RelativeLayout>
            </LinearLayout>

            <!--second-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@color/primary1"
                android:orientation="vertical"
                android:padding="15dp">

                <!---Security-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF">

                    <ImageView
                        android:id="@+id/securityicon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_security"
                        android:padding="12sp"
                        android:src="@drawable/security_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="Security &amp; Privacy "
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/right_arrow24"

                        />

                </RelativeLayout>

                <!---Text size-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#00FFFFFF">

                    <ImageView
                        android:id="@+id/textSizeIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12sp"
                        android:src="@drawable/text_size_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="@string/textsiz"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/right_arrow24"

                        />

                </RelativeLayout>

                <!---languages-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#00FFFFFF">

                    <ImageView
                        android:id="@+id/languageIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_notification"
                        android:padding="12sp"
                        android:src="@drawable/language_24" />

                    <TextView
                        android:id="@+id/Languageext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="@string/lang"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/Languageimage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/right_arrow24"

                        />

                </RelativeLayout>

            </LinearLayout>

            <!--Third-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@color/primary1"
                android:orientation="vertical"
                android:padding="15dp">

                <!---contact us-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF">

                    <ImageView
                        android:id="@+id/contactIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/rounf_back_private_account"
                        android:padding="12sp"
                        android:src="@drawable/contact_us_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="@string/cont"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/right_arrow24"

                        />

                </RelativeLayout>

                <!---Log out-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF">

                    <ImageView
                        android:id="@+id/logOut"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_security"
                        android:padding="12sp"
                        android:src="@drawable/logout_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="@string/log"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/right_arrow24"

                        />

                </RelativeLayout>

            </LinearLayout>



        </LinearLayout>

    </ScrollView>
</LinearLayout>




